--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-APP_URL="http://localhost/mvc/"
+APP_URL=http://localhost/mvc/
+
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=password
+DB_DATABASE=test
