--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 APP_URL=http://localhost/mvc/
 
+#This value to for environment if it's dev or produciton, change it to false if production
+DEV=true
 
 DB_HOST=localhost:3306
 DB_USER=root
