--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_URL=http://localhost/mvc/
+APP_URL=http://localhost/mvc
 
 #This value to for environment if it's dev or produciton, change it to false if production
 DEV=true
